--- a/www/index.html
+++ b/www/index.html
@@ -52,6 +52,14 @@
                 <li class="item" ng-repeat="ooo in users">{{ooo.first_name}}<li>
             </ul>
         </div>
+
+        <button class="button button-icon">
+          <div class="bar bar-header">
+            <button class="button button-icon icon ion-navicon"></button>
+            <div class="h1 title">Header Buttons</div>
+            <button class="button button-clear button-positive">Edit</button>
+          </div>
+        </button>
         
         <script type="text/javascript">
             app.initialize();
