--- a/www/index.html
+++ b/www/index.html
@@ -49,7 +49,7 @@
     <body ng-app="myApp">
         <div class="app" ng-controller="TestController">
             <ul class="list">
-                <li class="item" ng-repeat="ooo in users">{{ooo.first_name}}<li>
+                <li class="item" ng-repeat="ooo in users">{{ooo.name}}<li>
             </ul>
         </div>
 
