--- a/www/index.html
+++ b/www/index.html
@@ -52,21 +52,21 @@
                 <li class="item" ng-repeat="ooo in users">{{ooo.name}}<li>
             </ul>
         </div>
-
+<!--
         <button class="button button-icon">
           <div class="bar bar-header">
             <button class="button button-icon icon ion-navicon"></button>
             <div class="h1 title">Header Buttons</div>
             <button class="button button-clear button-positive">Edit</button>
           </div>
-        </button>
+        </button> -->
         
         <script type="text/javascript">
             app.initialize();
         </script>
 
     <!-- Menu de login   -->
-    
+      <!-- 
         <form accept-charset="UTF-8" action="/users" class="new_user"
       id="new_user" method="post">
 
@@ -86,6 +86,6 @@
 
   <input class="btn btn-large btn-primary" name="commit" type="submit"
          value="Create my account" />
-</form>
+</form>-->
     </body>
 </html>
