--- a/www/index.html
+++ b/www/index.html
@@ -27,7 +27,6 @@
         <script type="text/javascript" src="phonegap.js"></script>
         <script type="text/javascript" src="js/index.js"></script>
         <script type="text/javascript" src="js/angular.min.js"></script>
-        
         <script type="text/javascript" src="js/angular-route.min.js"></script>
         
         <script type="text/javascript">
@@ -49,7 +48,7 @@
     <body ng-app="myApp">
         <div class="app" ng-controller="TestController">
             <ul class="list">
-                <li class="item" ng-repeat="ooo in states">{{ooo.state}}<li>
+                <li class="item" ng-repeat="ooo in states">{{ooo.name}}<li>
             </ul>
         </div>
 <!--
