--- a/www/index.html
+++ b/www/index.html
@@ -48,7 +48,7 @@
     <body ng-app="myApp">
         <div class="app" ng-controller="TestController">
             <ul class="list">
-                <li class="item" ng-repeat="ooo in states">{{ooo.names}}<li>
+                <li class="item" ng-repeat="ooo in states">{{ooo.name}}<li>
             </ul>
         </div>
 <!--
