--- a/www/index.html
+++ b/www/index.html
@@ -120,7 +120,7 @@
 
     <div class="bar bar-header">
     <button class="button button-icon icon ion-navicon"></button>
-    <div class="h1 title">Header Buttons</div>
+    <div class="h1 title">Guia avaliador de serviços</div>
     <button class="button button-clear button-positive">Edit</button></div>
             
             
