--- a/www/index.html
+++ b/www/index.html
@@ -21,7 +21,9 @@
     <head>
         <meta charset="utf-8" />
         <meta name="format-detection" content="telephone=no" />
-        <meta name="viewport" content="name-scalable=no, initial-scale=1, maximum-scale=1, minimum-scale=1, width=device-width, height=device-height, target-densitydpi=device-dpi" />
+        <!-- <meta name="viewport" content="name-scalable=no, initial-scale=1, maximum-scale=1, minimum-scale=1, width=device-width,  -->
+        <!-- height=device-height, target-densitydpi=device-dpi" /> -->
+        <meta name="viewport" content="initial-scale=1, maximum-scale=1, user-scalable=no, width=device-width">
         <link rel="stylesheet" type="text/css" href="css/index.css" />
         <link rel="stylesheet" type="text/css" href="ionic/css/ionic.min.css" />
         <!-- <link rel="stylesheet" type="text/css" href="ionic/css/ionicons.css" /> -->
