--- a/www/index.html
+++ b/www/index.html
@@ -42,7 +42,7 @@
         <script src="ionic/js/ionic-angular.js"></script>
               
         <script type="text/javascript">
-            var app = angular.module('myApp', ['ionic','ngRoute']);
+            var app = angular.module('myApp', ['ionic','ngRoute','ngTouch']);
 
             app.controller('CitiesController', function($scope, $http, $routeParams) {
                 $scope.cities = [];
