--- a/www/states.html
+++ b/www/states.html
@@ -1,6 +1,20 @@
     <div class="list">
-     <a class="item" ng-repeat="state in states" href="#/cities/{{state.id}}" ><img src="img/{{state.name}}.png">&nbsp;&nbsp;&nbsp;&nbsp;{{state.name}}</a>
+     <a class="item item-avatar" ng-repeat="state in states" href="#/cities/{{state.id}}" >
+      <img src="img/{{state.name}}.png">
+      <h2>{{state.name}}</h2></a>
     </div>
 
+
+<!-- <div class="list"> -->
+    <!-- <a class="item item-avatar" href="#"> -->
+      <!-- <img src="venkman.jpg"> -->
+      <!-- <h2>Venkman</h2> --><!-- 
+      <p>Back off, man. I'm a scientist.</p>
+    </a>
+
+    ...
+
+</div> -->
     
 
+<!-- &nbsp;&nbsp;&nbsp;&nbsp; -->
