--- a/www/cities.html
+++ b/www/cities.html
@@ -1,3 +1,10 @@
-            <ul class="list">
+<!--             <ul class="list">
                 <li class="item" ng-repeat="cities in cities">{{cities.name}}<li>
-            </ul>
+            </ul> -->
+
+
+                <div class="list">
+     <a class="item item-avatar" ng-repeat="city in cities" href="#/technician/{{city.id}}" >
+      <!-- <img src="img/{{city.name}}.png"> -->
+      <h2>{{city.name}}</h2></a>
+    </div>
