--- a/www/states.html
+++ b/www/states.html
@@ -1,7 +1,7 @@
     <div class="list">
      <a class="item item-avatar" ng-repeat="state in states" href="#/cities/{{state.id}}" >
-      <img src="img/{{state.name}}.png">
-      <h2>{{state.name}}</h2></a>
+      <img src="img/{{state.id}}.png">
+      <h2>{{state.name}} - {{state.acronym}}</h2></a>
     </div>
 
 
