--- a/www/cities.html
+++ b/www/cities.html
@@ -4,7 +4,7 @@
 
 
                 <div class="list">
-     <a class="item item-avatar" ng-repeat="city in cities" href="#/technician/{{city.id}}" >
+     <a class="item item-avatar" ng-repeat="city in cities" href="#/services" >
       <!-- <img src="img/{{city.name}}.png"> -->
       <h2>{{city.name}}</h2></a>
     </div>
