--- a/www/search.html
+++ b/www/search.html
@@ -1,3 +1,6 @@
-            <ul class="list">
-                <li class="item" ng-repeat="technician in technician">{{technician.name}}<li>
-            </ul>
+            <div class="list list-inset">
+  <label class="item item-input">
+    <i class="icon ion-search placeholder-icon"></i>
+    <input type="text" placeholder="Search">
+  </label>
+</div>
