--- a/www/technician.html
+++ b/www/technician.html
@@ -3,8 +3,8 @@
             </ul>
  -->
              <div class="list">
-     <a class="item item-avatar" ng-repeat="technician in technician" href="#/technician_showcase/{{technician.id}}" >
+     <a class="item item-avatar" ng-repeat="technician in technicians" href="#/technician_showcase/{{technician.id}}" >
       <!-- <img src="img/{{city.name}}.png"> -->
-      <h2>{{technician.name}}</h2>
+      <h2>{{technicians.name}}</h2>
       <p>{{services.name}}</p></a>
     </div>
