--- a/www/index.html
+++ b/www/index.html
@@ -259,7 +259,7 @@
      
         
         <script type="text/javascript">
-            app.initialize();
+           /* app.initialize(); */
         </script>
 
     </body>
