--- a/www/users.html
+++ b/www/users.html
@@ -1,3 +1,9 @@
-            <ul class="list">
-                <li class="item" ng-repeat="users in users">{{user.name}}<li>
+       <!--     <ul class="list">
+                <li class="item" ng-repeat="user in users">{{user.name}}<li>
             </ul>
+-->
+             <div class="list">
+     <a class="item item-avatar" ng-repeat="user in users" href="#/technician_showcase/{{user.id}}" >
+      <!-- <img src="img/{{city.name}}.png"> -->
+      <h2>{{user.name}}</h2></a>
+    </div>
