--- a/www/index.html
+++ b/www/index.html
@@ -53,7 +53,7 @@
                 $scope.cities = [];
                 $scope.test = function() {
                     var params = (typeof($routeParams.state_id) != "undefined" && $routeParams.state_id != null) ? "?state_id=" + $routeParams.state_id : "";
-                    $http({method: 'GET', url: "http://192.168.1.104:3000/cities.json" + params}).success(function(data) {
+                    $http({method: 'GET', url: "http://192.168.1.103:3000/cities.json" + params}).success(function(data) {
                         $scope.cities = data;  
 
                     });
@@ -66,7 +66,7 @@
                 $scope.Technician = [];
                 $scope.test = function() {
                     var params = (typeof($routeParams.city_id) != "undefined" && $routeParams.city_id != null) ? "?city_id=" + $routeParams.city_id : "";
-                    $http({method: 'GET', url: "http://192.168.1.104:3000/technician.json" + params}).success(function(data) {
+                    $http({method: 'GET', url: "http://192.168.1.103:3000/technician.json" + params}).success(function(data) {
                         $scope.technician = data;
                     });
 
@@ -74,12 +74,12 @@
                 $scope.test();
             });
 
-            app.controller('TechnicianController2', function($scope, $http, $routeParams) {
-                $scope.Technician = [];
+            app.controller('UsersController2', function($scope, $http, $routeParams) {
+                $scope.Users = [];
                 $scope.test = function() {
                     var params = (typeof($routeParams.id) != "undefined" && $routeParams.id != null) ? "?id=" + $routeParams.id : "";
-                    $http({method: 'GET', url: "http://192.168.1.104:3000/technician.json" + params}).success(function(data) {
-                        $scope.technician = data;
+                    $http({method: 'GET', url: "http://192.168.1.103:3000/users.json" + params}).success(function(data) {
+                        $scope.users = data;
                     });
 
                 };
@@ -90,7 +90,7 @@
             app.controller('UsersController', function($scope, $http) {
                 $scope.users = [];
                 $scope.test = function() {
-                    $http({method: 'GET', url: "http://192.168.1.104:3000/users.json"}).success(function(data) {
+                    $http({method: 'GET', url: "http://192.168.1.103:3000/users.json"}).success(function(data) {
                         $scope.users = data;
                     });
 
@@ -100,7 +100,7 @@
             app.controller('StatesController', function($scope, $http) {
                 $scope.States = [];
                 $scope.test = function() {
-                    $http({method: 'GET', url: "http://192.168.1.104:3000/states.json"}).success(function(data) {
+                    $http({method: 'GET', url: "http://192.168.1.103:3000/states.json"}).success(function(data) {
                         $scope.states = data;
                     });
 
@@ -111,7 +111,7 @@
                 $scope.Services = [];
                 $scope.test = function() {
                     var params = (typeof($routeParams.city_id) != "undefined" && $routeParams.city_id != null) ? "?city_id=" + $routeParams.city_id : "";
-                    $http({method: 'GET', url: "http://192.168.1.104:3000/services.json" + params}).success(function(data) {
+                    $http({method: 'GET', url: "http://192.168.1.103:3000/services.json" + params}).success(function(data) {
                         $scope.services = data;
                     });
 
@@ -190,7 +190,7 @@
             $routeProvider
             .when("/technician_showcase/:id", {
             templateUrl: "technician_showcase.html?" ,
-            controller: "TechnicianController2"
+            controller: "UsersController2"
             })
             }]);
           
@@ -227,7 +227,7 @@
 
   
   <div class="tabs tabs-icon-only">
-  <a class="tab-item" href="#/technician">
+  <a class="tab-item" href="#/users">
     <i class="icon ion-ios7-people"></i>
   </a>
   <a class="tab-item" href="#/services">
