--- a/platforms/android/assets/www/technician_showcase.html
+++ b/platforms/android/assets/www/technician_showcase.html
@@ -1,30 +1,62 @@
 
-    <div class="list card">
+ <!--   <div class="list card">
 
-  <div class="item item-avatar" ng-repeat="technician in technician">
-   <img src="img/technician/tech1.jpg">
-    <h2>{{technician.name}}</h2>
-    <p>{{technician.created_at}}</p>
+  <div class="item item-avatar" ng-repeat="user in users">
+  <img src="img/technician/tech1.jpg">  
+    
 
   </div>
+-->
+  <div class="item item-body" >
 
-  <div class="item item-body" ng-repeat="technician in technician">
-    <!-- <img class="full-image" src="delorean.jpg"> -->
-    <p>    {{technician.description}}    </p>
+    <h2>Tecnico: {{user.name}}</h2>
+        <!-- <img class="full-image" src="delorean.jpg"> -->
+    <p>Descrição: {{user.description}}</p>
+    <p>Criado em: {{user.created_at}}</p>
     <p>
       <a href="#" class="subdued">1 Like</a>
-      <a href="#" class="subdued">5 Comments</a>
-    </p>
-  </div>
+      <a href="#" class="subdued">{{microposts.length}} Avaliações</a></p>
 
-  <div class="item tabs tabs-secondary tabs-icon-left">
+<form name="reviewForm" ng-repeat="micropost in microposts" ng-submit="reviewCtrl.addReview(product)">
+
+
+<blockquote>
+<b>Stars: {{ review.stars}}</b>
+{{ micropost.content}}
+<cite>by: {{ review.author}}</cite>
+</blockquote>
+
+
+
+
+
+<div class="pannel" >
+   <blockquote>
+   <b>{{micropost.content}}</b></p>
+   <cite>{{micropost.user_id}}</cite>
+   <cite>{{micropost.userid_tech}}</cite>
+</blockquote>
+</div>
+    
+
+ 
+
+  </div>
+<select ng-model=" review.stars">
+<option value="1">Positivo</option>
+<option value="2">Negativo</option>
+  <input type="text" ng-model="todo.category"/>
+        <input type="text" ng-model="todo.description" ng-keyup="addTodo(todo, $event)"/>
+        <button ng-click="addTodo(todo)">Add</button>
+  
+  <div class="item tabs tabs-secondary tabs-icon-left"  >
     <a class="tab-item" href="#">
       <i class="icon ion-thumbsup"></i>
       Like
     </a>
     <a class="tab-item" href="#">
       <i class="icon ion-chatbox"></i>
-      Comment
+      Comment  
     </a>
     <a class="tab-item" href="#">
       <i class="icon ion-share"></i>
